--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.6+2
   camera: ^0.10.3
+  google_mlkit_image_labeling: ^0.5.0
 
 dev_dependencies:
   flutter_test:
